--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://yourwebsite.com/images/preview.jpg"> <!-- رابط صورة المعاينة -->
     <meta property="og:url" content="https://yourwebsite.com"> <!-- رابط موقعك -->
     <meta property="og:type" content="website"> <!-- نوع الصفحة -->
-    <meta name="twitter:card" content="pec_etc.jpg"> <!-- يخلي الصورة كبيرة في سناب وتويتر -->
+    <meta name="twitter:card" content="https://lozin1.github.io/mqlb2/images/pec_etc.jpg"> <!-- يخلي الصورة كبيرة في سناب وتويتر -->
 </head>
 <body>
     <div class="card">
@@ -27,4 +27,5 @@
     </div>
 </body>
 </html>
+
 
