Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>x.com</title>
     <meta property="og:title" content="الكلية التقنية(college_etc) على X"> <!-- عنوان المعاينة -->
     <meta property="og:description" content="عاجل ورسميا || أعلن المجلس الإداري بـ # الكلية_ التقنية في جميع فروعها انحاء المملكة بفتح التخصصات بشهادة البكالوريوس لكل من معه شهادة الدبلوم لدى الكلية"> <!-- وصف المعاينة -->
-    <meta property="og:image" content="https://yourwebsite.com/images/preview.jpg"> <!-- رابط صورة المعاينة -->
+    <meta property="og:image" content="https://lozin1.github.io/x.com-jed_college_tec-status/pec_etc.jpg"> <!-- رابط صورة المعاينة -->
     <meta property="og:url" content="https://yourwebsite.com"> <!-- رابط موقعك -->
     <meta property="og:type" content="website"> <!-- نوع الصفحة -->
-    <meta name="twitter:card" content="https://lozin1.github.io/mqlb2/images/pec_etc.jpg"> <!-- يخلي الصورة كبيرة في سناب وتويتر -->
+    <meta name="twitter:card" content="https://lozin1.github.io/x.com-jed_college_tec-status/pec_etc.jpg"> <!-- يخلي الصورة كبيرة في سناب وتويتر -->
 </head>
 <body>
     <div class="card">
@@ -27,5 +27,6 @@
     </div>
 </body>
 </html>
+
 
 
